refactor GET/events and GET/events/id endpoints